First api of springboot working